# sysopy

./: .gitignore  CMakeLists.txt  README.md
cw01/files/: scripts
cw01/zad1/: makefile
cw01/zad2/: main.c  makefile  raport2.txt
cw01/zad3a/: main_dyn.c  makefile
cw01/zad3b/: main.c  main_dyn.c  makefile
cw02/: zad1.c
cw02/zad1/: makefile  wyniki.txt  zad1.c
cw02/zad2/: makefile  zad2.c
cw03/zad1/: main.c  makefile
cw03/zad2/: main.c  makefile  test.c
cw03/zad3/: main.c  makefile  test.c
cw04/zad1/: main.c  makefile
cw04/zad2/: exec_test.c  main.c  makefile
cw04/zad3/: main.c
cw04/zad4a/: catcher.c  makefile  sender.c
cw04/zad4b/: catcher.c  sender.c
cw05/zad1/: commands  main.c
cw05/zad2/: main.c  testfile
cw05/zad3/: cons1  consumer.c  main.c  makefile  prod1  prod2  prod3  producer.c
cw06/zad1/: client.c  common.h  makefile  server.c
cw06/zad2/: client.c  common.h  makefile  server.c
cw07/zad1/: common.h  main.c  makefile  worker1.c  worker2.c  worker3.c
cw07/zad2/: common.h  main.c  makefile  worker1.c  worker2.c  worker3.c
cw08/zad1/: Times.txt  main.c  makefile
cw09/zad1/: main.c  makefile
cw10/zad1/: client.c  common.h  server.c
cw10/zad2/: client.c  common.h  makefile  server.c
misc/: generate
zestaw1/: file.txt  file_c.txt  library.c  library.h  main  main.c  makefile  raport2.txt  raport3a.txt  raport3b.txt  scripts
zestaw1/files/: generate
zestaw1/zad1/: makefile
zestaw1/zad2/: main.c  makefile
zestaw1/zad3a/: makefile  raport3a.txt
zestaw1/zad3b/: main_dyn.c  makefile  raport3b.txt
(+100 files in other folders)
